[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/pelaaja/pelaaja-pisamaton.png" type="Texture" id=1]
[ext_resource path="res://art/pelaaja/pelaajakyykkää.png" type="Texture" id=2]
[ext_resource path="res://art/pelaaja/pelaaja-pisamaton-2.png" type="Texture" id=3]
[ext_resource path="res://art/pelaaja/pelaajakyykkää-2.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://audio/fx/osuma_Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://audio/fx/sipsi_Loop.ogg" type="AudioStream" id=7]
[ext_resource path="res://audio/fx/kalja_Loop.ogg" type="AudioStream" id=8]
[ext_resource path="res://audio/fx/kakku_Loop.ogg" type="AudioStream" id=9]
[ext_resource path="res://art/pelaaja/pelaaja-säikähti.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "anim1",
"speed": 2.5
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "end",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "special2",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.9675
height = 73.6123

[node name="Player" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.18, 0.18 )
frames = SubResource( 1 )
animation = "end"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="Special1Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Special2Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Pickup2Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Pickup2Timer2" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="osuma2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="kalja2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="sipsi2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="kakku2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="osuma" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
mix_target = 2

[node name="sipsi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
mix_target = 2

[node name="kalja" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
mix_target = 2

[node name="kakku" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
mix_target = 2

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="Special1Timer" to="." method="_on_Special1Timer_timeout"]
[connection signal="timeout" from="Special2Timer" to="." method="_on_Special2Timer_timeout"]
[connection signal="ready" from="Pickup2Timer" to="." method="_on_Pickup2Timer_ready"]
[connection signal="timeout" from="Pickup2Timer" to="." method="_on_Pickup2Timer_timeout"]
[connection signal="timeout" from="Pickup2Timer2" to="." method="_on_Pickup2Timer2_timeout"]
